--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -106,8 +107,8 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="js/jquery-1.10.2.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <!-- <script src="js/jquery-1.10.2.js"></script>
+    <script src="js/bootstrap.js"></script> -->
 
 </body>
 
