--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <ul class="list-inline intro-social-buttons">
                             <li><a href="https://github.com/vtnerd" title="Lee on Github" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i></a>
                             </li>
-                            <li><a href="https://twitter.com/vtnerd" title="Lee on Twitter" class="btn btn-default btn-lg"><i class="fa fa-twitter-square fa-fw"></i></a>
+                            <li><a href="https://twitter.com/vtnerd" title="Lee on Twitter" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i></a>
                             </li>
                             <li><a href="https://www.linkedin.com/pub/lee-clagett/16/a98/84" title="Lee on Linkedin" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i></a>
                             </li>
