--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom Google Web Font -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="font-awesome/css/brands.min.css" rel="stylesheet">
+    <link href="font-awesome/css/regular.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
 
     <!-- Add custom CSS here -->
@@ -61,20 +62,20 @@
                         <h3>Software Developer</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
-                            <li><a href="http://code.leeclagett.com" class="btn btn-default btn-lg"><i class="fa fa-code-fork"></i> <span class="network-name">Projects</span></a>
+                            <li><a href="http://code.leeclagett.com" class="btn btn-default btn-lg"><i class="far fa-code-fork"></i> <span class="network-name">Projects</span></a>
                             </li>
                             <li><a href="https://careers.stackoverflow.com/leeclagett" class="btn btn-default btn-lg"><i class="glyphicon glyphicon-file"></i> <span class="network-name">Resume</span></a>
                             </li>
                         </ul>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
-                            <li><a href="https://github.com/vtnerd" title="Lee on Github" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i></a>
+                            <li><a href="https://github.com/vtnerd" title="Lee on Github" class="btn btn-default btn-lg"><i class="fab fa-github fa-fw"></i></a>
                             </li>
-                            <li><a href="https://twitter.com/vtnerd" title="Lee on Twitter" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i></a>
+                            <li><a href="https://twitter.com/vtnerd" title="Lee on Twitter" class="btn btn-default btn-lg"><i class="fab fa-twitter fa-fw"></i></a>
                             </li>
-                            <li><a href="https://www.linkedin.com/pub/lee-clagett/16/a98/84" title="Lee on Linkedin" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i></a>
+                            <li><a href="https://www.linkedin.com/pub/lee-clagett/16/a98/84" title="Lee on Linkedin" class="btn btn-default btn-lg"><i class="fab fa-linkedin fa-fw"></i></a>
                             </li>
-                            <li><a href="https://stackoverflow.com/users/3685909/" title="Lee on Stackoverflow" class="btn btn-default btn-lg"><i class="fa fa-stack-overflow fa-fw"></i></a>
+                            <li><a href="https://stackoverflow.com/users/3685909/" title="Lee on Stackoverflow" class="btn btn-default btn-lg"><i class="fab fa-stack-overflow fa-fw"></i></a>
                             </li>
                         </ul>
                     </div>
