--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
                             </li>
                             <li><a href="https://twitter.com/vtnerd" title="Lee on Twitter" class="btn btn-default btn-lg"><i class="fab fa-twitter fa-fw"></i></a>
                             </li>
+                            <li><a href="https://reddit.com/u/vtnerd" title="Lee on Reddit" class="btn btn-default btn-lg"><i class="fab fa-reddit-alien fa-fw"></i></a>
+                            </li>
                             <li><a href="https://www.linkedin.com/pub/lee-clagett/16/a98/84" title="Lee on Linkedin" class="btn btn-default btn-lg"><i class="fab fa-linkedin fa-fw"></i></a>
                             </li>
                             <li><a href="https://stackoverflow.com/users/3685909/" title="Lee on Stackoverflow" class="btn btn-default btn-lg"><i class="fab fa-stack-overflow fa-fw"></i></a>
