--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
                         </ul>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
+                            <li><a href="https://y.at/<E2><AD><90><E2><9D><97><E2><AD><90>" title="Lee on Yat" class="btn btn-default btn-lg"><F0><9F><96><96></a>
+                            </li>
                             <li><a href="https://github.com/vtnerd" title="Lee on Github" class="btn btn-default btn-lg"><i class="fab fa-github fa-fw"></i></a>
                             </li>
                             <li><a href="https://twitter.com/vtnerd" title="Lee on Twitter" class="btn btn-default btn-lg"><i class="fab fa-twitter fa-fw"></i></a>
