Funky new branding

--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Lee Clagett</h1>
+                        <h1>Lee *!* Clagett</h1>
                         <h3>Software Developer</h3>
+                        <hr class="intro-divider">
+                        <h3>⭐❗⭐ c o o l e r . c o d e s ⭐❗⭐</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li><a href="http://code.leeclagett.com" class="btn btn-default btn-lg"><i class="fa fa-code-fork"></i> <span class="network-name">Projects</span></a>
