--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <h1>Lee *!* Clagett</h1>
                         <h3>Software Developer</h3>
                         <hr class="intro-divider">
-                        <h3>🖖/⭐❗⭐ cooler.codes 🖖/⭐❗⭐</h3>
+                        <h3>cooler.codes y.at/⭐❗⭐</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li><a href="http://code.leeclagett.com" class="btn btn-default btn-lg"><i class="fa fa-code-fork"></i> <span class="network-name">Projects</span></a>
