Add PGP fingerprint

--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
                             <li><a href="https://stackoverflow.com/users/3685909/" title="Lee on Stackoverflow" class="btn btn-default btn-lg"><i class="fab fa-stack-overflow fa-fw"></i></a>
                             </li>
                         </ul>
+                        <hr class="intro-divider">
+                        <h4>DC42 4DA4 A231 64FC 515F &nbsp; 1835 D184 C359 97CA 627A</h4>
                     </div>
                 </div>
             </div>
