--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <h3>PGP | cooler.codes | y.at/⭐❗⭐</h3> -->
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
-                            <li><a href="https://y.at/⭐❗⭐" class="btn btn-default btn-lg"><i class="fa fa-code-fork"></i> <span class="network-name">⭐❗⭐Projects</span></a>
+                            <li><a href="https://y.at/⭐💻⭐" class="btn btn-default btn-lg"><i class="fa fa-code-fork"></i> <span class="network-name">⭐💻⭐Projects</span></a>
                             </li>
                             <li><a href="https://careers.stackoverflow.com/leeclagett" class="btn btn-default btn-lg"><i class="glyphicon glyphicon-file"></i> <span class="network-name">Resume</span></a>
                             </li>
@@ -82,7 +82,10 @@
                             </li>
                         </ul>
                         <hr class="intro-divider">
-                        <h4>DC42 4DA4 A231 64FC 515F<br>1835 D184 C359 97CA 627A</h4>
+                        <table><tr>
+                            <td><a href="https://y.at/⭐❗⭐" class="btn btn-default btn-lg"><i class="fa fa-code-fork"></i> <span class="network-name">⭐❗⭐</span></a></td>
+                            <td><h4>DC42 4DA4 A231 64FC 515F<br>1835 D184 C359 97CA 627A</h4></td>
+                        </tr></table>
                     </div>
                 </div>
             </div>
