--- a/index.html
+++ b/index.html
@@ -82,10 +82,8 @@
                             </li>
                         </ul>
                         <hr class="intro-divider">
-                        <table><tr>
-                            <td><a href="https://y.at/⭐❗⭐" class="btn btn-default btn-lg"><i class="fa fa-code-fork"></i> <span class="network-name">⭐❗⭐</span></a></td>
-                            <td><h4>DC42 4DA4 A231 64FC 515F<br>1835 D184 C359 97CA 627A</h4></td>
-                        </tr></table>
+                        <div align="left"><a href="https://y.at/⭐❗⭐" class="btn btn-default btn-lg"><i class="fa fa-code-fork"></i> <span class="network-name">⭐❗⭐</span></a></div>
+                        <div align="right"><h4>DC42 4DA4 A231 64FC 515F<br>1835 D184 C359 97CA 627A</h4></div>
                     </div>
                 </div>
             </div>
