--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <h3>PGP | cooler.codes | y.at/⭐❗⭐</h3> -->
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
-                            <li><a href="https://y.at/⭐💻⭐" class="btn btn-default btn-lg"><i class="fa fa-code-fork"></i> <span class="network-name">⭐💻⭐Projects</span></a>
+                            <li><a href="https://y.at/⭐💻⭐" class="btn btn-default btn-lg"><i class="fa fa-code-fork"></i> <span class="network-name">⭐💻⭐Portfolio</span></a>
                             </li>
                             <li><a href="https://careers.stackoverflow.com/leeclagett" class="btn btn-default btn-lg"><i class="glyphicon glyphicon-file"></i> <span class="network-name">Resume</span></a>
                             </li>
