More re-arranging

--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@
                         <h3>PGP | cooler.codes | y.at/⭐❗⭐</h3> -->
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
-                            <li><a href="https://y.at/⭐💻⭐" class="btn btn-default btn-lg"><i class="fa fa-code-fork"></i> <span class="network-name">⭐💻⭐Portfolio</span></a>
+                            <li><a href="https://y.at/⭐📏⭐" class="btn btn-default btn-lg">⭐📏⭐ Portfolio</a>
                             </li>
                             <li><a href="https://careers.stackoverflow.com/leeclagett" class="btn btn-default btn-lg"><i class="glyphicon glyphicon-file"></i> <span class="network-name">Resume</span></a>
+                            </li>
+                            <li><a href="https://example.com class="btn btn-default btn-lg">🔑 PGP</a>
                             </li>
                         </ul>
                         <hr class="intro-divider">
@@ -81,12 +83,13 @@
                             <li><a href="https://stackoverflow.com/users/3685909/" title="Lee on Stackoverflow" class="btn btn-default btn-lg"><i class="fab fa-stack-overflow fa-fw"></i></a>
                             </li>
                         </ul>
+                        <!--
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li><h4>DC42 4DA4 A231 64FC 515F</h4></li>
                             <li><div style="vertical-align:middle;"><a href="https://y.at/⭐❗⭐" class="btn btn-default btn-lg"><i class="fa fa-code-fork"></i> <span class="network-name">⭐❗⭐</span></a></div></li>
                             <li><h4>1835 D184 C359 97CA 627A</h4></li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
             </div>
