--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Lee *!* Clagett</h1>
+                        <h1>Lee <a href="https://y.at/⭐❗⭐">★!★</a> Clagett</h1>
                         <h3>Software Developer</h3>
                         <!--<hr class="intro-divider">
                         <h3>PGP | cooler.codes | y.at/⭐❗⭐</h3> -->
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
-                            <li><a href="https://y.at/⭐❗⭐" class="btn btn-default btn-lg">⭐❗⭐ Portfolio</a>
+                            <li><a href="https://y.at/⭐💻⭐" class="btn btn-default btn-lg">⭐💻⭐ Portfolio</a>
                             </li>
                             <li><a href="https://careers.stackoverflow.com/leeclagett" class="btn btn-default btn-lg"><i class="glyphicon glyphicon-file"></i> <span class="network-name">Resume</span></a>
                             </li>
