--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             </li>
                             <li><a href="https://careers.stackoverflow.com/leeclagett" class="btn btn-default btn-lg"><i class="glyphicon glyphicon-file"></i> <span class="network-name">Resume</span></a>
                             </li>
-                            <li><a href="https://example.com" class="btn btn-default btn-lg">🔑 PGP</a>
+                            <li><a href="/mail_leeclagett.pub.gpg" class="btn btn-default btn-lg">🔑 PGP</a>
                             </li>
                         </ul>
                         <hr class="intro-divider">
