Update resume link

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <ul class="list-inline intro-social-buttons">
                             <li><a href="https://y.at/⭐💻⭐" class="btn btn-default btn-lg">⭐💻⭐ Portfolio</a>
                             </li>
-                            <li><a href="https://careers.stackoverflow.com/leeclagett" class="btn btn-default btn-lg"><i class="glyphicon glyphicon-file"></i> <span class="network-name">Resume</span></a>
+                            <li><a href="https://www.linkedin.com/pub/lee-clagett/16/a98/84" class="btn btn-default btn-lg"><i class="glyphicon glyphicon-file"></i> <span class="network-name">Resume</span></a>
                             </li>
                             <li><a href="/mail_leeclagett.pub.gpg" class="btn btn-default btn-lg">🔑 PGP</a>
                             </li>
