--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <h3>PGP | cooler.codes | y.at/⭐❗⭐</h3> -->
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
-                            <li><a href="https://y.at/⭐💻⭐" class="btn btn-default btn-lg">⭐💻⭐ Portfolio</a>
+                            <li><a href="https://portfolio.leeclagett.com" class="btn btn-default btn-lg">⭐💻⭐ Portfolio</a>
                             </li>
                             <li><a href="/resume.html" class="btn btn-default btn-lg"><i class="glyphicon glyphicon-file"></i> <span class="network-name">Resume</span></a>
                             </li>
@@ -128,3 +128,4 @@
 </body>
 
 </html>
+
